# 00-ai-engineering-bootcamp-cohort-2

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
evals/: eval_coordinator_agent.py  eval_retriever.py
notebooks/week_1/: 01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb  03-explore-arxiv-api.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-evaluation-dataset.ipynb  04-RAGAS-evals.ipynb
notebooks/week_3/: 01-structured-outputs-intro.ipynb  02-structured-outputs-rag-pipeline.ipynb  03-hybrid-search.ipynb  04-Reranking.ipynb  05-prompt-templates.ipynb
notebooks/week_4/: 01-Langgraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Routing.ipynb  04-Agent-single-turn.ipynb
notebooks/week_5/: 01-Agent-multi-turn.ipynb  02-multiple-tools.ipynb  03-streaming-state.ipynb  04-human-feedback.ipynb  05-mcp.ipynb
notebooks/week_6/: 01_shopping_cart_tools.ipynb  02-shopping-cart-agent.ipynb  03-coordinator-agent.ipynb  04-coordinator-eval.ipynb
notebooks/week_6/utils/: tools.py  utils.py
notebooks/week_7/: 01-warehouse-agent-database.ipynb  02-warehouse-agent-tools.ipynb  03-warehouse-agent-Langgraph.ipynb  04-llm-router.ipynb  05-CI-quality-gate.ipynb
notebooks/week_7/utils/: tools.py
postgres-data/pgdata/: postmaster.pid
postgres-data/pgdata/global/: 1260  pg_control  (+1 more)
src/api/: app.py  endpoints.py  middleware.py  models.py
src/chatbot_ui/: app.py
src/items_mcp_server/: main.py  utils.py
src/reviews_mcp_server/: main.py  utils.py
(+76 files in other folders)
