[project]
name = "00-ai-engineering-bootcamp-cohort-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.1",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "openai>=1.109.1",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.11.9",
    "streamlit>=1.50.0",
    "pandas==2.2.3",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "qdrant-client>=1.15.1",
    "langsmith>=0.4.34",
    "langgraph>=0.6.10",
    "ragas>=0.3.6",
    "ruff>=0.14.1",
    "instructor>=1.11.3",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "fastembed>=0.7.3",
    "cohere>=5.19.0",
    "psycopg2-binary>=2.9.11",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]",
    "fastmcp==2.12.0",
    "beartype==0.20.0"
]
